# ipc_lib

./: Cargo.toml  README.md  WORKSPACE.md
.github/workflows/: build-bun-bindings.yml  ci.yml  lint.yml
bindings_uniffi/: .gitignore  Cargo.toml  README.md  build_bindings.sh
bindings_uniffi/examples/: .eslintrc.json  .gitignore  README_BUN.md  bun_ffi.ts  bun_ffi_example.ts  package.json  python_example.py  tsconfig.json
bindings_uniffi/src/: c_abi.rs  lib.rs
ipc_chat_example/: Cargo.toml
ipc_chat_example/src/: main.rs
ipc_subtitle/: Cargo.toml  readme.md
ipc_subtitle/src/: main.rs
ipc_wgpu_example/: Cargo.toml
ipc_wgpu_example/src/: main.rs  shader.wgsl
src/: lib.rs  main.rs
src/communication/: file_based.rs  in_memory.rs  mod.rs  shared_memory.rs  unix_socket.rs
wgpu_example/: Cargo.toml
wgpu_example/src/: main.rs
