[package]
name = "single_instance_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
memmap2 = "0.9"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
