[package]
name = "ipc_subtitle"
version = "0.1.0"
edition = "2021"

[dependencies]
single_instance_app = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
egui = "0.28"
eframe = { version = "0.28", features = ["wayland", "x11"] }
uuid = { version = "1.0", features = ["v4"] }
