[package]
name = "ipc_subtitle"
version = "0.1.0"
edition = "2021"

[dependencies]
single_instance_app = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
winit = "0.29"
softbuffer = "0.4"
tiny-skia = "0.11"
fontdue = "0.8"
uuid = { version = "1.0", features = ["v4"] }
