[package]
name = "wgpu_example"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0.0"
winit = "0.30.8"
pollster = "0.4.0"
env_logger = "0.11.6"
log = "0.4.22"
bytemuck = { version = "1.21", features = ["derive"] }
single_instance_app = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
